@@ -7,9 +7,9 @@ topic-tags: administering
 content-type: reference
 role: Admin
 exl-id: a9fc9c06-b9e6-4a5e-ab5e-0930ecd4b51b
-source-git-commit: 2a97935a81cf9c0a1a832dd27b62d388805863e0
+source-git-commit: 1f1deb4f5d2033420aa1cece95666894b2f56aad
 workflow-type: tm+mt
-source-wordcount: '1422'
+source-wordcount: '1423'
 ht-degree: 2%
 
 ---
@@ -56,7 +56,7 @@ SolrCloud 지침에 따라 설치하는 것이 좋습니다.
 ### JVM 구성 예 {#jvm-configuration-example}
 
 ```shell
-JVM_OPTS="-server -Xmx2048m -XX:MaxPermSize=768M -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xloggc:../logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Djava.awt.headless=true"
+JVM_OPTS="-server -Xmx2048m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xloggc:../logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Djava.awt.headless=true"
 ```
 
 ### SolrCloud 설정 명령 {#solrcloud-setup-commands}
@@ -80,8 +80,7 @@ SolrCloud 모드에서 실행할 때 MLS 설치 전에 다음 SolrCloud 설정 �
 참조:
 [https://solr.apache.org/guide/6_6/solr-control-script-reference.html#SolrControlScriptReference-Create](https://solr.apache.org/guide/6_6/solr-control-script-reference.html#SolrControlScriptReference-Create)
 
-사용:
-./bin/solr 만들기 \
+사용법: ./bin/solr 만들기 \
 -c *mycollection-name*\
 -d *config-dir* \
 -n *myconfig-name* \
@@ -298,7 +297,7 @@ SolrCloud 또는 독립 실행형 모드에 대한 설치를 시작하려면 다
 
      Solr의 컬렉션 경로
 
-   * --도움말
+   * —도움말
 
      인쇄 명령줄 옵션
 
@@ -314,7 +313,7 @@ SolrCloud 또는 독립 실행형 모드에 대한 설치를 시작하려면 다
 
    * Install.sh -v 5 -d /tmp/solr-5.4.0 -c /tmp/solr-5.4.0/server/solr/collection1
 
-**메모**:
+**참고**:
 
 * 설치 스크립트는 &quot;.orig&quot;를 추가하여 새 버전을 설치하기 전에 schema.xml 및 solrconfig.xml을 백업합니다
 
